cmake_minimum_required(VERSION 3.16)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode longest_common_prefix.cpp group_anagrams.cpp zigzag_conversion.cpp permutations.cpp phone_number.cpp combination_sum.cpp water_container.cpp longest_palindromic_substring.cpp generate_parentheses.cpp first_last_pos.cpp "pow(x,n).cpp" unique_bst.cpp spiral_matrix.cpp merge_lists.cpp swap_nodes_pairs.cpp construct_bt_preorder_postorder.cpp bs.cpp add_search_word.cpp 4sum.cpp 01_matrix.cpp all_nodes_distance_k_binary_tree.cpp binary_tree_level_order.cpp tree_coloring.cpp iterator_combo.cpp generate_subsets.cpp binary_watch.cpp palindrome_partitioning.cpp "substring graph.cpp" beautifully_arrange.cpp preorder_traversal.cpp)